--- a/jazzpiano/piano_style.css
+++ b/jazzpiano/piano_style.css
@@ -1,7 +1,7 @@
 /*----------------------------------------------------------------------------------------------
 Author: Madison Federin-Easley
-Date: 1/19/2021
-Revision no. 5.0
+Date: 6/25/2021
+Revision no. 6.0
 ------------------------------------------------------------------------------------------------*/
 
 body {font-family: Helvetica, Arial, sans-serif; background-color: #6e98b9;
@@ -15,7 +15,7 @@ button {display: inline-block; white-space: normal; word-wrap: break-word; font-
     vertical-align: middle; margin: 0; height: 2.5em; background-color:#ccc;}
     button:focus {outline: none; box-shadow: 0px 0px 0px rgb(63, 63, 63);}
         /* Buttons sized larger for extensions and scales */
-        #additional button, #scales button {width: 4em; height: 3em;}
+        #additional button, #scales button {width: 4.2em; height: 3em;}
 
         /* Extra left margin needed for the keyboards because they have negative margins */
          #upperkeys, #lowerkeys {margin-left: 1em;}
@@ -49,6 +49,10 @@ button {display: inline-block; white-space: normal; word-wrap: break-word; font-
     #reset {display: block; clear: both;}
 
         /* Classes to add when a root, extension, scale is chosen */
-        .ext {color: #ff0000;}
+        .ext {color: #ff0000; font-weight: bolder;}
+        .extbtn {background-color: #FF4D4D;}
         .scl {color: #c71585; font-weight: bolder;}
-        .root {color: #008d00;}
+        .sclbtn {background-color: #D055A3;}
+        .root {color: #008d00; font-weight: bolder;}
+        .rootbtn {box-shadow:-1px 2px 2px #498549 inset,0 0 5px #ccc inset,0 0 3px rgba(0,0,0,0.2);
+                background:linear-gradient(to bottom,#d6fca8 0%,#498549 100%);}
