Worked on Sass stylesheet

--- a/fanpage/fanpage_style_less.less
+++ b/fanpage/fanpage_style_less.less
@@ -2,7 +2,7 @@
 Author: Madison Federin-Easley
 CSE-41207 Introduction to HTML and CSS
 Date: 2/1/2021
-Revision no. 4.0 (Formly CSS stylesheet)
+Revision no. 4.0 (Formerly CSS stylesheet)
 ***************************************************************************************************************/
 @color_1: #333232;
 @color_2: #282482;
